@@ -1,6 +1,11 @@
 // JBrowse JSON-format configuration file
 {
 
+    // aboutThisBrowser: {
+    //     title: '<i>Oryza sativa</i>',
+    //     description: 'Browser for O. sativa transcripts and RNA-seq data, produced by the Smith laboratory at Example State University.'
+    // },
+
     // // uncomment and edit the example below to configure a faceted track selector
     // trackSelector: {
     //     type: 'Faceted',
