@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+ * Added an "About JBrowse" popup dialog, which supports an
+   `aboutThisBrowser` configuration stanza containing a title for the
+   main browser window, and a description to be shown in a pop-up
+   dialog when the title is clicked (issue #206).
+
 1.8.1     2013-02-12 12:56:24 EST5EDT
 
  * Added support for `cigarAttribute` and `mdAttributes` configuration
